Исправлена задача "PhoneBookSpringBoot"